package(default_visibility = ["//visibility:public"])
load("@my_deps//:requirements.bzl", "requirement")



load("@rules_python//python:defs.bzl", "py_library", "py_test")
py_library(
    name = "e2e",
    srcs = ["e2e.py"],
    deps = [
        requirement("mysql-connector-python"),
        "//entpy/storage",
        "//entpy/storage/sql",
        "//entpy/schema",
    ],
)
py_test(
    name = "sqlite_test",
    srcs = ["sqlite_test.py"],
    python_version = "PY3",
    deps = [
        ":e2e",
    ],
)
py_test(
    name = "mysql_test",
    srcs = ["mysql_test.py"],
    python_version = "PY3",
    deps = [
        ":e2e",
    ],
)
