package(default_visibility = ["//visibility:public"])
load("@pip//:requirements.bzl", "requirement")



load("@rules_python//python:defs.bzl", "py_library", "py_test")
py_library(
    name = "e2e",
    srcs = ["e2e.py"],
    deps = [
        "//entpy/storage",
        "//entpy/storage/sql",
        "//entpy/schema",
    ],
)
py_test(
    name = "sqlite_test",
    srcs = ["sqlite_test.py"],
    python_version = "PY3",
    deps = [
        ":e2e",
    ],
)
py_test(
    name = "mysql_test",
    srcs = ["mysql_test.py"],
    python_version = "PY3",
    deps = [
        ":e2e",
        requirement("mysql-connector-python"),
    ],
)
py_test(
    name = "postgresql_test",
    srcs = ["postgresql_test.py"],
    python_version = "PY2",
    deps = [
        ":e2e",
        requirement("psycopg2-binary"),
    ],
)
py_test(
    name = "redis_test",
    srcs = ["redis_test.py"],
    python_version = "PY3",
    deps = [
        ":e2e",
        "//entpy/storage/redis",
        requirement("redis"),
    ],
)
py_test(
    name = "mongo_test",
    srcs = ["mongo_test.py"],
    python_version = "PY3",
    deps = [
        ":e2e",
        "//entpy/storage/mongo",
        requirement("pymongo"),
    ],
)
