package(default_visibility = ["//visibility:public"])

load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "loader",
    srcs = ["loader.py"]
)

py_test(
    name = "loader_test",
    srcs = ["loader_test.py"],
    python_version = "PY3",
    deps = [
        ":loader",
        "//entpy/storage",
    ],
)
