package(default_visibility = ["//visibility:public"])

load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "schema",
    srcs = [
        "ent_schema.py",
        "mutator.py"
    ]
)

py_test(
    name = "schema_test",
    srcs = ["schema_test.py"],
    python_version = "PY2",
    deps = [
        ":schema",
        "//entpy/base",
        "//entpy/storage",
    ],
)
