package(default_visibility = ["//visibility:public"])

load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "schema",
    srcs = [
        "schema.py",
        "mutator.py"
    ],
    deps = [
        "//entpy/base",
        "//entpy/storage",
        "//entpy/loader",
    ],
)

py_test(
    name = "schema_test",
    srcs = ["schema_test.py"],
    python_version = "PY3",
    deps = [
        ":schema",
    ],
)
