package(default_visibility = ["//visibility:public"])

load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "storage",
    srcs = ["storage.py"]
)

py_test(
    name = "storage_test",
    srcs = ["storage_test.py"],
    python_version = "PY3",
    deps = [
        "//entpy/storage",
    ],
)
