package(default_visibility = ["//visibility:public"])

load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "sql",
    srcs = ["sql_storage.py"]
)

py_test(
    name = "sql_test",
    srcs = ["sql_test.py"],
    python_version = "PY3",
    deps = [
        ":sql",
        "//entpy/schema"
    ],
)
